--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "connect-mongo": "^3.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "mongoose": "^5.6.11",
+    "helmet": "^3.21.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.1",
     "npm": "^6.11.2",
     "redis": "^2.8.0"
