--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.1",
     "npm": "^6.11.2",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "mocha": "^6.2.0"
   }
 }
