--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,10 @@
 steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
+- name: 'redis'
+  env:
+  - 'REDISHOST=127.0.0.1'
+  - 'REDISPORT=6379'
 - name: 'gcr.io/cloud-builders/npm'
   args: ['test']
 - name: "gcr.io/cloud-builders/gcloud"
