--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,4 +8,4 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['test']
 - name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy"]
+  args: ["run"]
