--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,10 +2,11 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
 - name: 'redis'
-  args: ['sleep', '10000']
   env:
   - 'REDISHOST=127.0.0.1'
   - 'REDISPORT=6379'
+  network:
+  - 'name=default'
   timeout: 500s
 - name: 'gcr.io/cloud-builders/npm'
   args: ['test']
