--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,10 +2,10 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
 - name: 'redis'
+  args: ['sleep', '100s'] 
   env:
   - 'REDISHOST=127.0.0.1'
   - 'REDISPORT=6379'
-  timeout: 200s
 - name: 'gcr.io/cloud-builders/npm'
   args: ['test']
 - name: "gcr.io/cloud-builders/gcloud"
