--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "helmet": "^3.21.0",
+    "nconf": "^0.10.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.1",
     "npm": "^6.11.2",
