--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,14 @@
 version: '3'
-services:
-  redis:
-    image: redis
-    container_name: redis
-    expose:
-      - 6379
+redis:
+  image: redis
+  container_name: redis
+  expose:
+    - 6379
+ 
+app:
+  # some definitions
+  links:
+    - redis
+  environment:
+    - REDIS_URL=redis://redis
+    # rest of the environment definitions
